# core

./: .gitignore  CLAUDE.md  hugo.toml  pyproject.toml
.github/workflows/: collect.yml  finalize.yml  lint.yml  pages.yml  publish.yml  test.yml
config/: dedup.yaml  delivery.yaml  enrich.yaml  feedback.yaml  interpret.yaml  publish.yaml  review.yaml  scoring.yaml  selfcheck.yaml  sources.yaml
config/sources.d/: community.yaml  x.yaml
content/posts/: 2026-05-29.md  2026-05-30.md  2026-06-19.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md
data/: state.db
docs/: BRD.md  KANBAN.md  PRD.md  ROADMAP.md  Session启动包.md  collection.md  competitive-analysis-ai-news.md  recent-papers.md  sources.md
docs/adr/: 0001-llm-openai-compatible.md  0002-feedback-quality-weight-into-scoring.md  0003-genre-publisher-split.md  0004-state-db-out-of-git.md
docs/intent/: source-expansion-and-observability.md  telegram-feedback-loop-and-visibility.md
launchd/: README.md  ai-newsday-collect.plist  ai-newsday-finalize.plist
references/: editorial-and-format-sop.md  x-account-candidates.yaml
scripts/: opml_to_sources.py
src/: cli.py
tests/: fakes.py
tools/: show_papers.py
(+203 files in other folders)
